Date constructor handles infinite values incorrectly. https://bugs.webkit.org/show_bug.cgi?id=70998

Reviewed by Filip Pizlo.

Source/JavaScriptCore:

* runtime/DateConstructor.cpp:
(JSC::constructDate):
    - should be checking !finite rather then isnan.

LayoutTests:

* fast/js/date-constructor-expected.txt:
* fast/js/script-tests/date-constructor.js:
    - Added test cases.



Canonical link: https://commits.webkit.org/92479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104267 268f45cc-cd09-0410-ab3c-d52691b4dbfc